Fix bug overflowX

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -32,7 +32,7 @@
         font-weight: 400;
         background: #fff;
         color: #a5a5a5;
-        overflow: hidden;
+        overflow-x: hidden;
     }
     /* Header */
     
